--- a/views/results.erb
+++ b/views/results.erb
@@ -6,4 +6,4 @@
 
 <h2>Consonants: <%= @analyzed_text.count_of_consonants%></h2>
 
-<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys.first%> used <%= @analyzed_text.count_of_words.values.first%> times</h2>
+<h2>Most Common Letter: <%= @analyzed_text.most_used_letter.keys.first%> used <%= @analyzed_text.count_of_words.first%> times</h2>
